# Defacto

./: .gitignore  BUILD-INSTALLER.md  DOCS.md  DOWNLOAD.md  INSTALL.md  INSTALLER.md  ONE-LINE-INSTALL.md  README.md  README.ru.md  RELEASE-v0.30.md  RELEASE-v0.40.md  RELEASE-v0.42.md  RELEASE-v0.43.md  RELEASE-v0.44.md  RELEASE-v0.45.md  RELEASE-v0.47.md  RELEASE-v0.51.md  RELEASE-v0.52.md  RELEASE-v0.53.md  SYNTAX.md  a.out  about.html  build-exe.sh  build-installer.py  build-windows-installer.sh  build.sh  defacto-installer-win.py  defacto-installer.bat  defacto-installer.sh  defacto-installer.spec  defo  defo.json  demo-v0.44.de  docs.html  example-driver.asm  example-driver.de  hello.asm  hello.de  hello.de.save  index.html  (+8 more)
.github/workflows/: build-installer.yml
addons/cpp/: Makefile  runtime_loader  runtime_loader.cpp  sample_addon.cpp  sample_addon.dylib
addons/rust/: Cargo.toml  Makefile  README.md
addons/rust-backend/: Cargo.toml  Makefile  README.md
addons/rust-backend/src/: lib.rs
addons/rust/src/: lib.rs
compiler/: Makefile  main.cpp
compiler/src/: arm64_codegen.h  codegen.h  defacto.h  lexer.h  llvm_codegen.h  parser.h
css/: components.css  layout.css  style.css
defo_modules/net/: package.json
examples/: features.de  generics.de
pointers-prototype/: README.md
site/: addons.html  defo.html  index.html  install.html  syntax.html
site/css/: styles.css
stdlib/: README.md
tools/: defo.sh  deformat.sh  delint.sh
vscode-extension/: defacto-icon-theme.json  language-configuration.json  package.json
website/: download.html  index.html
(+29 files in other folders)
