[package]
name = "defacto-backend"
version = "0.1.0"
edition = "2021"
description = "Backend web framework for Defacto - HTTP server with routing"
license = "MIT"

[lib]
name = "defacto_backend"
crate-type = ["cdylib", "rlib"]

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = true
strip = true
